--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ version = "0.0.0"
 [project.optional-dependencies]
 dev = ["ipdb", "ipython", "pytest", "build", "twine", "pre-commit"]
 
+[project.scripts]
+lensort = "pytools._cli.lensort:main"
+
 [tool.setuptools.packages.find]
 where = ["src"]
 include = ["pytools"]
